[frontendActions] Reduce mutability in GitFetchSupportImpl